--- a/Labir/Properties/Resources.resx
+++ b/Labir/Properties/Resources.resx
@@ -148,6 +148,9 @@
   <data name="Фон2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Фон2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="тыков0,5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\тыков0,5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="тыков" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\тыков.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -160,7 +163,13 @@
   <data name="eb7aa4869d2edf92538415ef42b1d3e0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\eb7aa4869d2edf92538415ef42b1d3e0.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="тыков0,5" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\тыков0,5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="A1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\A1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="A2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\A2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="D2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\D2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
